<resources>
    <string name="app_name">MyImcHelt</string>
    <string name="calcular_imc">Calcular IMC</string>
    <string name="carregar_nova_imagem">Carregar nova imagem</string>
    <string name="consultar_academias_pr_ximas">Consultar academias próximas</string>
    <string name="insira_seu_peso">Insira seu peso</string>
    <string name="insira_sua_altura">Insira sua altura</string>
    <string name="dividor">__________________________________________________</string>
    <string name="app_logo">App logo</string>
    <string name="sua_altura_vai_aqui">Sua altura vai aqui</string>
    <string name="user_image">User image</string>
    <string name="seu_peso_vai_aqui">seu peso vai aqui</string>
    <string name="title_activity_pesquisar_academia">Map</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="action_settings">Settings</string>
    <string name="sampleText">Looking for your location...</string>
    <string name="go">Go</string>
    <string name="where_do_you_want_to_go">Where do you want to go</string>
    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="textview">TextView</string>
    <string name="toast_ok">Permissão Concedida!</string>
    <string name="toast_rep">Repita a ação!</string>
    <string name="toast_negado">Permissão Negada!</string>
    <string name="toast_provH">Provider Habilitado!</string>
    <string name="toast_provD">Provider Desabilitado!</string>
    <string name="toast_provDH">Habilite sua posição!</string>
    <string name="toast_status">Status alterado!</string>

</resources>
